# TemplateMetaProgramming

./: CMakeLists.txt  README.md  build.bat
src/: CMakeLists.txt  factorial.hpp  fibonacci.hpp  if.hpp
tests/: CMakeLists.txt  main.cpp  testfactorial.hpp  testfibonacci.hpp  testif.hpp
